; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/gcov/extr_fs.c_ghost_node.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/gcov/extr_fs.c_ghost_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gcov_node = type { %struct.TYPE_2__*, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [46 x i8] c"could not save data for '%s' (out of memory)\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gcov_node*)* @ghost_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ghost_node(%struct.gcov_node* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gcov_node*, align 8
  store %struct.gcov_node* %0, %struct.gcov_node** %3, align 8
  %4 = load %struct.gcov_node*, %struct.gcov_node** %3, align 8
  %5 = getelementptr inbounds %struct.gcov_node, %struct.gcov_node* %4, i32 0, i32 0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %7 = call i32 @gcov_info_dup(%struct.TYPE_2__* %6)
  %8 = load %struct.gcov_node*, %struct.gcov_node** %3, align 8
  %9 = getelementptr inbounds %struct.gcov_node, %struct.gcov_node* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 8
  %10 = load %struct.gcov_node*, %struct.gcov_node** %3, align 8
  %11 = getelementptr inbounds %struct.gcov_node, %struct.gcov_node* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %23, label %14

14:                                               ; preds = %1
  %15 = load %struct.gcov_node*, %struct.gcov_node** %3, align 8
  %16 = getelementptr inbounds %struct.gcov_node, %struct.gcov_node* %15, i32 0, i32 0
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @pr_warning(i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32, i32* @ENOMEM, align 4
  %22 = sub nsw i32 0, %21
  store i32 %22, i32* %2, align 4
  br label %26

23:                                               ; preds = %1
  %24 = load %struct.gcov_node*, %struct.gcov_node** %3, align 8
  %25 = getelementptr inbounds %struct.gcov_node, %struct.gcov_node* %24, i32 0, i32 0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %25, align 8
  store i32 0, i32* %2, align 4
  br label %26

26:                                               ; preds = %23, %14
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @gcov_info_dup(%struct.TYPE_2__*) #1

declare dso_local i32 @pr_warning(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
